[package]
name = "live-poll"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "21.0.0" }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
codegen-units = 1
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
lto = true
panic = "abort"

[profile.release-with-logs]
inherits = "release"
debug = 1

[features]
testutils = ["soroban-sdk/testutils"]
